feature(shell): Corrections SONAR